# DesignPattern

./: .clangd  CMakeLists.txt
Builder/: CMakeLists.txt
Builder/src/: html.cpp
SOLID/: CMakeLists.txt
SOLID/inc/: pch.h
SOLID/inc/DIP/: dip.h
SOLID/inc/ISP/: isp.h
SOLID/inc/LSP/: lsp.h
SOLID/inc/OCP/: ocp.h
SOLID/inc/SRP/: srp.h
SOLID/md/: solid.md
SOLID/src/: dip.cpp  isp.cpp  lsp.cpp  ocp.cpp  srp.cpp
cmake/: MyUsefulFuncs.cmake
